# dvp

./: .flake8  Makefile  README.md  pyproject.toml
.github/workflows/: onpr.yaml
dvp_dbt/: README.md  dbt_project.yml  packages.yml
dvp_dbt/models/: schema.yaml  sources.yaml
dvp_dbt/models/raw/: raw_student_course_cohort.sql  v_raw_course.sql  v_raw_student_course_cohort.sql
dvp_dbt/models/raw_stage/: v_stg_course.sql  v_stg_student_course_cohort.sql
dvp_dbt/models/raw_vault/hub/: hub_cohort.sql  hub_course.sql  hub_line.sql  hub_purchase.sql  hub_student.sql
dvp_dbt/models/raw_vault/link/: link_course_cohort.sql  link_course_line.sql  link_student_course.sql  t_link_student_cohort.sql
dvp_dbt/models/raw_vault/sat/: sat_course.sql  sat_student.sql
dvp_dbt/models/raw_vault/t_link/: t_link_student_course.sql
dvp_dbt/models/stage/: stg_student_course_cohort.sql
dvp_py/: README.md  creds.py  test_hub.ipynb  test_link.ipynb  test_sat.ipynb
dvp_py/hub/: hub.py
dvp_py/link/: link.py
dvp_py/sat/: sat.py
dvp_py/sql/: hub_course.sql
dvp_py/sql/link/: link_course_line.sql
dvp_py/sql/sat/: sat_course.sql
scripts/: README.md  hub.py
