[tool.poetry]
name = "dvp"
version = "0.1.0"
description = "ETL processes Manager for DataVault"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
pandas = "^2.1.4"
sqlalchemy = "^2.0.23"
dbt-postgres = "^1.7.4"
dbt-core = "^1.7.4"
setuptools = "^69.0.3"

[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
(
  \.eggs
  |\.git
  | .*_pb2.py
  |\.mypy_cache
  |\.venv
  |venv
)
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
